# SimpleWebrtc

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  webrtc_config.cpp  webrtc_config.h
dtls/: dtls_certificate.cpp  dtls_certificate.h  dtls_context.cpp  dtls_context.h  dtls_packet.cpp  dtls_packet.h  dtls_srtp_keying_material.cpp  dtls_srtp_keying_material.h  dtls_transport.cpp  dtls_transport.h
ice/: ice_candidate.cpp  ice_candidate.h  ice_credentials.cpp  ice_credentials.h  ice_udp_server.cpp  ice_udp_server.h  ice_username.cpp  ice_username.h  session_ice_udp_server.cpp  session_ice_udp_server.h  session_transport_environment_config.cpp  session_transport_environment_config.h  stun_message.cpp  stun_message.h
log/: log.cpp  log.h
media/: keyframe_request.h  media_fanout_router.cpp  media_fanout_router.h  media_identity_authority.cpp  media_identity_authority.h  media_payload_type_mapper.cpp  media_payload_type_mapper.h  media_router.cpp  media_router.h  media_router_stats_json.cpp  media_router_stats_json.h  media_router_stats_prometheus.cpp  media_router_stats_prometheus.h  media_ssrc_mapper.cpp  media_ssrc_mapper.h  media_track_resolver.cpp  media_track_resolver.h  nack_retransmit_throttle.cpp  nack_retransmit_throttle.h  rtcp_feedback_router.cpp  rtcp_feedback_router.h  rtcp_report_service.cpp  rtcp_report_service.h  rtcp_transport_cc_feedback_service.cpp  rtcp_transport_cc_feedback_service.h  rtp_packet_cache.cpp  rtp_packet_cache.h  rtx_retransmission_index.cpp  rtx_retransmission_index.h  rtx_sequence_number_allocator.cpp  rtx_sequence_number_allocator.h  simulcast_rid_target.h  video_keyframe_detector.cpp  video_keyframe_detector.h  whep_rtp_rewriter.cpp  whep_rtp_rewriter.h
net/: detect_ssl_session.h  http.cpp  http.h  plain_http.h  socket.cpp  socket.h  tcp_server.h  tls_http.h  udp_port_allocator.cpp  udp_port_allocator.h
rtp/: rtcp_compound_packet.cpp  rtcp_compound_packet.h  rtcp_feedback.cpp  rtcp_feedback.h  rtcp_fir_sequence_tracker.cpp  rtcp_fir_sequence_tracker.h  rtcp_interval_scheduler.cpp  rtcp_interval_scheduler.h  rtcp_packet_builder.cpp  rtcp_packet_builder.h  rtcp_packet_writer.cpp  rtcp_packet_writer.h  rtcp_report.cpp  rtcp_report.h  rtcp_report_generator.cpp  rtcp_report_generator.h  rtcp_session_stats.cpp  rtcp_session_stats.h  rtcp_transport_feedback.cpp  rtcp_transport_feedback.h  rtp_header_extension.cpp  rtp_header_extension.h  rtp_packet.cpp  rtp_packet.h  rtp_packet_rewriter.cpp  rtp_packet_rewriter.h  rtp_receive_statistics.cpp  rtp_receive_statistics.h  rtp_retransmission_cache.cpp  rtp_retransmission_cache.h  rtp_rtx_packet.cpp  rtp_rtx_packet.h
security/: certificate_fingerprint.cpp  certificate_fingerprint.h
server/: http_error_response.h  lifecycle_debug_json.h  router.cpp  router.h  runtime_offer_filter.cpp  runtime_offer_filter.h  signaling_json.h  trickle_ice_http.h  trickle_ice_json.h  trickle_ice_metrics.h  trickle_ice_patch_handler.h  trickle_ice_sdpfrag.cpp  trickle_ice_sdpfrag.h  whep_handler.cpp  whep_handler.h  whip_handler.cpp  whip_handler.h
session/: peer_transport.cpp  peer_transport.h  publisher_session.cpp  publisher_session.h  session_state.h  session_stun_binding.cpp  session_stun_binding.h  session_transport_media_log.h  session_transport_peer_rebind.cpp  session_transport_peer_rebind.h  stream_registry.cpp  stream_registry.h  subscriber_session.cpp  subscriber_session.h  whep_session_transport.cpp  whep_session_transport.h  whip_session_transport.cpp  whip_session_transport.h
signaling/: webrtc_answer_factory.cpp  webrtc_answer_factory.h
signaling/sdp/: h264_fmtp_compat.cpp  h264_fmtp_compat.h  sdp_answer_builder.cpp  sdp_answer_builder.h  sdp_codec_negotiator.cpp  sdp_codec_negotiator.h  sdp_formatter.cpp  sdp_formatter.h  sdp_lexer.cpp  sdp_lexer.h  sdp_offer_validator.cpp  sdp_offer_validator.h  sdp_parser.cpp  sdp_parser.h  sdp_summary.cpp  sdp_summary.h  sdp_types.cpp  sdp_types.h
srtp/: srtp_session.cpp  srtp_session.h  srtp_transport.cpp  srtp_transport.h
util/: error.cpp  error.h  file.cpp  file.h  number_parse.h  random.cpp  random.h  reflect.h  scoped_exit.h  timestamp.cpp  timestamp.h
